# neuroprobe

./: .gitignore  LICENSE  MANIFEST.in  README.md  SUBMIT.md  braintreebank_download_extract.py  demo.py  demo_scene_object_baseline.py  leaderboard_schema.json  pyproject.toml
.github/workflows/: update_leaderboard.yml  validate_submissions.yml
analyses/: compare_neuroprobe_5_vs_2_folds.ipynb  identify_missing_coordinate_electrodes.ipynb  neuroprobe_generate_figure.py  neuroprobe_generate_figure_overall_splits.py  neuroprobe_generate_leaderboard_results.py  neuroprobe_multiclass_tasks.ipynb  select_neuroprobe_electrode_subsets.ipynb  show_hemispheres_electrodes_white.ipynb  task_correlations.ipynb
analyses/figures/: neuroprobe_eval_lite_DS_DM.json  neuroprobe_eval_lite_DS_DM.tex  neuroprobe_eval_lite_SS_DM.json  neuroprobe_eval_lite_SS_DM.tex  neuroprobe_eval_lite_SS_SM.json  neuroprobe_eval_lite_SS_SM.tex
analyses/optimal_stft_params/: optimal_stft_params.ipynb  run_optimal_max_frequency.sh  run_optimal_minmax_frequency.sh  run_optimal_stft_params_1.sh  run_optimal_stft_params_2.sh
analyses/task_coverage_of_sessions/: task_coverage_of_sessions.ipynb
analyses/time_space_decoding_analysis/: time_space_decoding_analysis.ipynb
examples/: eval_population.py  eval_single_electrode.py  eval_utils.py  generate_neuroprobe_figure.py  quickstart.ipynb  run_eval_population.sh  run_eval_population_mlp.sh  run_eval_population_mlp_mgpu.sh  run_eval_population_multiclass.sh  run_eval_single_electrode_neuroprobe_full.sh
leaderboard/BrainBERT_frozen_Wang_et_al_2023_Andrii_Zahorodnii_25_09_2025/: metadata.json
leaderboard/BrainBERT_untrained_frozen_Andrii_Zahorodnii_25_09_2025/: PUBLICATION.bib  metadata.json
leaderboard/Linear_Laplacian_rereferencing_spectrogram_Andrii_Zahorodnii_25_09_2025/: metadata.json
leaderboard/Linear_raw_voltage_Andrii_Zahorodnii_25_09_2025/: metadata.json
leaderboard/Linear_spectrogram_Andrii_Zahorodnii_25_09_2025/: ATTESTATION.txt  metadata.json
neuroprobe/: __init__.py  braintreebank_subject.py  config.py  datasets.py  train_test_splits.py
tests/: requirements.txt  test_submission_format.py
website/: index.html  parse_leaderboard_results.py  script.js  styles.css
(+272 files in other folders)
